--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.31.0
-transformers==4.36.2
-torch==2.1.2
-matplotlib==3.8.2
-langchain==0.1.0
-langchain-core==0.1.0
+streamlit
+transformers
+torch
+matplotlib
+langchain
+langchain-core
